--- a/cloudformation/aws-glue-cf-main.yml
+++ b/cloudformation/aws-glue-cf-main.yml
@@ -30,22 +30,22 @@ Resouces:
                 Effect: "Allow"
                 Resource: "*"
                 Action:
-                  - "glue:*",
-                  - "s3:GetBucketLocation",
-                  - "s3:ListBucket",
-                  - "s3:ListAllMyBuckets",
-                  - "s3:GetBucketAcl",
-                  - "ec2:DescribeVpcEndpoints",
-                  - "ec2:DescribeRouteTables",
-                  - "ec2:CreateNetworkInterface",
-                  - "ec2:DeleteNetworkInterface",
-                  - "ec2:DescribeNetworkInterfaces",
-                  - "ec2:DescribeSecurityGroups",
-                  - "ec2:DescribeSubnets",
-                  - "ec2:DescribeVpcAttribute",
-                  - "iam:ListRolePolicies",
-                  - "iam:GetRole",
-                  - "iam:GetRolePolicy",
+                  - "glue:*"
+                  - "s3:GetBucketLocation"
+                  - "s3:ListBucket"
+                  - "s3:ListAllMyBuckets"
+                  - "s3:GetBucketAcl"
+                  - "ec2:DescribeVpcEndpoints"
+                  - "ec2:DescribeRouteTables"
+                  - "ec2:CreateNetworkInterface"
+                  - "ec2:DeleteNetworkInterface"
+                  - "ec2:DescribeNetworkInterfaces"
+                  - "ec2:DescribeSecurityGroups"
+                  - "ec2:DescribeSubnets"
+                  - "ec2:DescribeVpcAttribute"
+                  - "iam:ListRolePolicies"
+                  - "iam:GetRole"
+                  - "iam:GetRolePolicy"
                   - "cloudwatch:PutMetricData"
               -
                 Effect: "Allow"
@@ -55,16 +55,16 @@ Resouces:
               -
                 Effect: "Allow"
                 Resource:
-                  - "arn:aws:s3:::aws-glue-*/*",
+                  - "arn:aws:s3:::aws-glue-*/*"
                   - "arn:aws:s3:::*/*aws-glue-*/*"
                 Action:
-                  - "s3:GetObject",
-                  - "s3:PutObject",
+                  - "s3:GetObject"
+                  - "s3:PutObject"
                   - "s3:DeleteObject"
               -
                 Effect: "Allow"
                 Resource:
-                  - "arn:aws:s3:::crawler-public*",
+                  - "arn:aws:s3:::crawler-public*"
                   - "arn:aws:s3:::aws-glue-*"
                 Action:
                   - "s3:GetObject"
@@ -72,18 +72,18 @@ Resouces:
                 Effect: "Allow"
                 Resource: "arn:aws:logs:*:*:/aws-glue/*"
                 Action:
-                  - "logs:CreateLogGroup",
-                  - "logs:CreateLogStream",
-                  - "logs:PutLogEvents",
+                  - "logs:CreateLogGroup"
+                  - "logs:CreateLogStream"
+                  - "logs:PutLogEvents"
                   - "logs:AssociateKmsKey"
               -
                 Effect: "Allow"
                 Resource:
-                  - "arn:aws:ec2:*:*:network-interface/*",
-                  - "arn:aws:ec2:*:*:security-group/*",
+                  - "arn:aws:ec2:*:*:network-interface/*"
+                  - "arn:aws:ec2:*:*:security-group/*"
                   - "arn:aws:ec2:*:*:instance/*"
                 Action:
-                  - "ec2:CreateTags",
+                  - "ec2:CreateTags"
                   - "ec2:DeleteTags"
                 Condition:
                   ForAllValues:StringEquals:
