--- a/cloudformation/aws-rds-aurora-cf-main.yml
+++ b/cloudformation/aws-rds-aurora-cf-main.yml
@@ -147,7 +147,7 @@ Resources:
     Properties:
       Parameters:
         character_set_database: "utf32"
-      Family: "aurora-mysql5.6"
+      Family: aurora5.6
       Description: "A parameter group for aurora db."
   AuroraCluster:
     Type: AWS::RDS::DBCluster
@@ -162,16 +162,11 @@ Resources:
           Value: !Ref AWS::StackId
       VpcSecurityGroupIds:
         - Ref: AuroraSecurityGroup
+    DeletionPolicy: Snapshot
   AuroraInstance:
     Type: AWS::RDS::DBInstance
     Properties:
       DBClusterIdentifier: !Ref AuroraCluster
-      DBSecurityGroups:
-        - Ref: AuroraSecurityGroup
-      AllocatedStorage: '5'
       DBInstanceClass: !Ref AuroraDBInstanceType
       PubliclyAccessible: false
-      Engine: aurora
-      MasterUsername: !Ref AuroraDBUsername
-      MasterUserPassword: !Ref AuroraDBPassword
-    DeletionPolicy: Snapshot
+      Engine: "aurora"
