--- a/cloudformation/aws-glue-cf-main.yml
+++ b/cloudformation/aws-glue-cf-main.yml
@@ -17,16 +17,16 @@ Parameters:
     Description: Table prefix name.
   JDBCConnectionName:
     Type: String
-    Description: cfn-connection-mysql-flights-1
+    Description: JDBC connection name.
   JDBCString:
     Type: String
-    Description: "JDBC connection string."
+    Description: JDBC connection string.
   JDBCUser:
     Type: String
-    Description: "JDBC user name."
+    Description: JDBC user name.
   JDBCPassword:
     Type: String
-    Description: "JDBC password."
+    Description: JDBC password.
     NoEcho: true
 
 Resources:
@@ -159,3 +159,56 @@ Resources:
       SchemaChangePolicy:
         UpdateBehavior: "UPDATE_IN_DATABASE"
         DeleteBehavior: "LOG"
+  CrawlerTable:
+    # Creating the table waits for the database to be created
+    DependsOn: CrawlerDatabase
+    Type: AWS::Glue::Table
+    Properties:
+      CatalogId: !Ref AWS::AccountId
+      DatabaseName: !Ref CrawlerDatabaseName
+      TableInput:
+        Name: !Ref CrawlerTableName
+        Description: Define the first few columns of the table
+        TableType: EXTERNAL_TABLE
+        Parameters: {
+          "classification": "csv"
+        }
+#       ViewExpandedText: String
+        PartitionKeys:
+        # Data is partitioned by month
+        - Name: mon
+          Type: bigint
+        StorageDescriptor:
+          OutputFormat: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+          Columns:
+          - Name: tbd
+            Type: tbd
+          InputFormat: org.apache.hadoop.mapred.TextInputFormat
+          Location: s3://tbd
+          SerdeInfo:
+            Parameters:
+              field.delim: ","
+            SerializationLibrary: org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe
+# Partition 1
+# Create an AWS Glue partition
+  CrawlerTablePartition1:
+    DependsOn: CrawlerTable
+    Type: AWS::Glue::Partition
+    Properties:
+      CatalogId: !Ref AWS::AccountId
+      DatabaseName: !Ref CrawlerDatabase
+      TableName: !Ref CrawlerTableName
+      PartitionInput:
+        Values:
+        - 1
+        StorageDescriptor:
+          OutputFormat: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+          Columns:
+          - Name: mon
+            Type: bigint
+          InputFormat: org.apache.hadoop.mapred.TextInputFormat
+          Location: s3://tbd
+          SerdeInfo:
+            Parameters:
+              field.delim: ","
+            SerializationLibrary: org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe
