--- a/cloudformation/aws-glue-cf-main.yml
+++ b/cloudformation/aws-glue-cf-main.yml
@@ -42,7 +42,7 @@ Resources:
             Effect: "Allow"
             Principal:
               Service:
-                - "ec2.amazonaws.com"
+                - "glue.amazonaws.com"
             Action:
               - "sts:AssumeRole"
       Policies:
